@startuml
class JobTitleController {
    + JobTitleController(getJobTitles:IGet<JobTitle>, createJobTitle:ICreate<JobTitle, NewJobTitle>, deleteJobTitle:IDelete<JobTitle>, updateJobTitle:IUpdate<JobTitle>)
    + <<async>> GetAll() : Task<IActionResult>
    + <<async>> GetById(jobTitleId:int) : Task<IActionResult>
    + <<async>> AddNewJobTitle(newJobTitle:NewJobTitle) : Task<IActionResult>
    + <<async>> DeleteJob(deletedJob:int) : Task<IActionResult>
    + <<async>> UpdateJobTitle(updateJobTitle:JobTitle) : Task<IActionResult>
}
class "IGet`1"<T> {
}
class "ICreate`2"<T1,T2> {
}
class "IDelete`1"<T> {
}
class "IUpdate`1"<T> {
}
WalktorughAppApiController <|-- JobTitleController
JobTitleController --> "_getJobTitles<JobTitle>" "IGet`1"
JobTitleController --> "_createJobTitle<JobTitle,NewJobTitle>" "ICreate`2"
JobTitleController --> "_deleteJobTitle<JobTitle>" "IDelete`1"
JobTitleController --> "_updateJobTitle<JobTitle>" "IUpdate`1"
@enduml
